ircv3_parse_derive/tests/ui/fail/04_unknown_attribute_fail.rs
use ircv3_parse_derive::FromMessage;

#[derive(FromMessage)]
struct M {
    #[irc(unknown)]
    field: String,
}

fn main() {}
